2003-06-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_set_mrl), (on_got_metadata_event),
	(update_dvd_menu_sub_lang): set the labels and playlist items when
	we get the metadata properly, fixes setting the labels with both
	backends, update subtitles and audio menus on non-DVDs as well,
	fixes OGM subtitles

2003-06-20  Bastien Nocera  <hadess@hadess.net>

	* README: updated with the latest fixes

2003-06-16  Julien MOUTTE <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_class_init),
	(got_error), (bacon_video_widget_get_metadata_string): error signal
	now indicates if playback has been stopped so that UI can update.
	* src/bacon-video-widget-xine.c: (bacon_video_widget_class_init),
	(xine_event_message): Applied the same change to xine backend.
	* src/bacon-video-widget.h: Changed signal prototype.
	* src/baconvideowidget-marshal.list: Added a STRING_BOOLEAN.
	* src/totem.c: (totem_action_error), (on_got_metadata_event),
	(on_error_event): updating depending on error signal and changing
	playlist title on metada event.

2003-06-16  Kjartan Maraas  <kmaraas@gnome.org>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_information):
	Make it compile again with gcc 2.9x.

2003-06-15  Julien MOUTTE <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (update_vis_xid), (update_xid),
	(bacon_video_widget_open), (bacon_video_widget_play),
	(bacon_video_widget_set_visuals), (bacon_video_widget_information):
	Removing some unneeded debug messages.
	* src/totem.c: (totem_action_error), (on_got_metadata_event): Updating
	title label on got_metadata event, changing play_pause label on error.

2003-06-15  Julien MOUTTE <julien@moutte.net>

	* src/bacon-video-widget-gst.c: Fixed indentation, cleaning hash table
	that has metadata, emit the got_metadata signal on get_length, other
	fixes

2003-06-15  Yanko Kaneti  <yaneti@declera.com>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian).
